--- a/applications/bookmyshow/src/main/resources/application.properties
+++ b/applications/bookmyshow/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=bookmyshow
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.show-sql=true
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookmyshow
 spring.datasource.username=postgres
 spring.datasource.password=root
